--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,9 +31,10 @@
         </a>
         <a class="brand span2" href="/">Meetup</a>
         <div class="nav-collapse">
-          <form class="navbar-search pull-left" action="">
+          <!--<form class="navbar-search pull-left" action="">
             <input type="text" class="search-query span3" placeholder="Search by event or group">
           </form>
+        -->
           <ul class="nav pull-right">
             <li><a href="/events.html">Events</a></li>
             <li><a href="/groups.html">Groups</a></li>
